--- a/CMD/dockerfile
+++ b/CMD/dockerfile
@@ -1,5 +1,5 @@
 ### cmd is used to run containers
 
 FROM almalinux:8
-RUN yum install ngnix -y
+RUN yum install nginx -y
 CMD ["nginx", "-g", "daemon off:"] 
