--- a/RUN/dockerfile
+++ b/RUN/dockerfile
@@ -1,4 +1,4 @@
-### to install or cpnfigure some packages we use run command
+### RUN is used to install or cpnfigure some packages we use run command
 
 FROM almalinux:8
 RUN yum install nginx -y
