--- a/LABEL/dockerfile
+++ b/LABEL/dockerfile
@@ -1,3 +1,5 @@
+### LABEL INSTRUCTION IS USED TO FILTER OUT THE IMAGES BASED ON SOME POINTS
+
 FROM almalinux:8
 LABEL COURSE=DEVOPS \
       TRAINER=Xperson \
