--- a/WORKDIR/dockerfile
+++ b/WORKDIR/dockerfile
@@ -2,3 +2,5 @@ FROM almalinux:8
 ##RUN cd /tmp
 WORKDIR /tmp
 RUN echo "HELLO WORLD" > hello.txt
+
+###workdir instruction is useful for nvigating to other files without storage
