--- a/WORKDIR/dockerfile
+++ b/WORKDIR/dockerfile
@@ -3,4 +3,4 @@ FROM almalinux:8
 WORKDIR /tmp
 RUN echo "HELLO WORLD" > hello.txt
 
-###workdir instruction is useful for nvigating to other files without storage
+###workdir instruction is useful for navigating to other files without storage
